Add project attribution in user language for OSM notes
- Introduced project attribution in the note text, translated to the user's preferred language.
- Updated language files for English and Spanish to include the new attribution message.
- Enhanced the configuration to store the project name and retrieve user language preferences for improved internationalization support.

--- a/locale/es/LC_MESSAGES/lora-osmnotes.po
+++ b/locale/es/LC_MESSAGES/lora-osmnotes.po
@@ -303,6 +303,9 @@ msgstr "❌ Error al cambiar idioma"
 msgid "❌ Idioma inválido. Usa: #osmlang es o #osmlang en\nInvalid language. Use: #osmlang es or #osmlang en"
 msgstr "❌ Idioma inválido. Usa: #osmlang es o #osmlang en"
 
+msgid "\n\n---\nCreado mediante OSM Mesh Notes Gateway (LoRa mesh → OSM Notes)"
+msgstr "\n\n---\nCreado mediante OSM Mesh Notes Gateway (LoRa mesh → OSM Notes)"
+
 msgid "🌐 Idioma actual / Current language: {lang}"
 msgstr "🌐 Idioma actual: {lang}"
 
